trunk/Archive2/bc/9cc0347a8f24c2/output
main.cpp:9:14: error: out-of-line constructor for 'Base' cannot have template arguments
Base<Ts...>::Base<Ts...>(){ std::cout << "wut?\n"; }
             ^   ~~~~~~~
1 error generated.
